# Mvm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mvm_dev.db  pyproject.toml  requirements.txt
backend/: __init__.py
backend/api/: app.py
backend/data_schema/: __init__.py  models.py
backend/db/: __init__.py  orm_models.py  session.py
backend/ingestion/: __init__.py  ingestion.py
backend/privacy/: __init__.py  privacy.py
docs/: index.md
frontend/: Dockerfile  index.html  next.config.ts  nginx.conf  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/api/register/: route.ts
frontend/src/components/: Dashboard.tsx  Interventions.tsx  LogForm.tsx  ProfileSetup.tsx  Simulate.tsx  TrajectoryChart.tsx
frontend/src/lib/: api.ts  authOptions.ts
models/: __init__.py  baseline.py
models/foundation/: __init__.py  model.py
models/optimization/: __init__.py  policy.py
models/personal/: __init__.py  adapter.py
models/simulation/: __init__.py  simulator.py
mvm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_adapter.py  test_api.py  test_baseline.py  test_foundation.py  test_ingestion.py  test_optimizer.py  test_privacy.py  test_schema.py  test_simulator.py  test_training.py
training/evaluation/: __init__.py  evaluate.py
training/fine_tuning/: __init__.py  finetune.py
training/pretraining/: __init__.py  pretrain.py
(+1 files in other folders)
