[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvm"
version = "0.1.0"
description = "Migraine Vulnerability Modeling: threshold-crossing latent state-space model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "cryptography>=42.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest-cov", "pytest>=8.2.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "models*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
